# appimageInstaller

./: .gitignore  README.md  pyproject.toml
src/app_image_installer_lupuscoding/: desktop_file_model.py  main.py
src/app_image_installer_lupuscoding/known_apps/: audacity.json  bitwarden.json  drawio.json  freecad.json  inkscape.json  keepassxc.json  obsidian.json  openscad.json  openshot.json  piskel.json  shotcut.json
