[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app_image_installer_lupuscoding"
version = "0.1.0"
authors = [
  { name="Ralph Dittrich", email="dittrich.ralph@lupuscoding.de" },
]
description = "Simple Linux AppImage installer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
dependencies = [
    "termcolor>=2.2.0",
    "click>=8.1.3",
]

[project.scripts]
appimageInstaller = "app_image_installer_lupuscoding:main.install"
aii = "app_image_installer_lupuscoding:main.install"

[project.urls]
"Homepage" = "https://github.com/lupuscoding/appimageInstaller"
"Bug Tracker" = "https://github.com/lupuscoding/appimageInstaller/issues"